--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "app-1",
   "version": "0.2.0",
@@ -16,6 +15,7 @@
     "history": "^5.3.0",
     "json-server": "^0.17.4",
     "npm-run-all": "^4.1.5",
+    "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
